examples/type_system/failing/167_tuple_destructure_ordered_concrete_conflict_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/167_tuple_destructure_ordered_concrete_conflict_e300.flx
// error[E300]: Type Mismatch
//
// I found a type mismatch.
//
//   examples/type_system/failing/167_tuple_destructure_ordered_concrete_conflict_e300.flx:29:21
//    |
// 29 |     let (a, b, c) = (1, 2)
//    |                     ^^^^^^
//    |                     ------ this expression has type `(Int, Int)`
//
//    |                     ------ destructure source type is known at compile time
//
// Note:
//   expected type: (_, _, _)
//   found type: (Int, Int)
//
// Help:
//   These two types are not compatible.
//   destructure source does not match pattern shape
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn main() -> Unit {
    let (a, b, c) = (1, 2)
}
